--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "typescript": "^5.0.0"
   },
   "scripts": {
-    "build": "vite build"
+    "build": "vite build",
+    "dist-branch": ""
   },
   "dependencies": {
     "@iconify-json/fa6-regular": "^1.2.3",
