--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
 
+    "types": ["vite/client", "bun-types"],
+
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
