Added codegen, and turns out the problem was something else so I didn't need it; leaving the code for future reference anyway

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "typescript": "^5.0.0"
   },
   "scripts": {
-    "build": "vite build",
-    "dist-branch": ""
+    "build": "vite build"
   },
   "dependencies": {
     "@iconify-json/fa6-regular": "^1.2.3",
