Improvements in frame creation, naming, styles and UX. Added separate FrameBar used by both Frame and CreatingFrame.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "start.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@unocss/preset-web-fonts": "^66.1.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -17,13 +18,12 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "chalk": "^5.4.1",
     "classnames": "^2.5.1",
-    "openai": "^4.87.3",
     "prettier": "^3.5.3",
-    "svelte": "^5.22.6",
+    "svelte": "^5.28.2",
     "svelte-portal": "^2.2.1",
     "svooltip": "^0.9.0",
-    "unocss": "^66.1.0-beta.3",
+    "unocss": "^66.1.1",
     "unplugin-icons": "^22.1.0",
-    "vite": "^6.2.1"
+    "vite": "^6.3.5"
   }
 }
