--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "svelte-portal": "^2.2.1",
     "svooltip": "^0.9.0",
     "unocss": "^66.1.1",
+    "unplugin-auto-import": "^19.2.0",
     "unplugin-icons": "^22.1.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-svelte-md": "^0.1.7"
   }
 }
