Re ordering of repo filesystem; everything still works

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,11 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
+
+    "paths": {
+      "@/*": ["./front/*"],
+      "@@/*": ["./land/*"]
+    }
   },
   "exclude": ["node_modules"]
 }
