--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "a-web-os",
+  "name": "web-substrate-mainframe",
   "module": "start.ts",
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest",
     "@unocss/preset-web-fonts": "^66.1.1"
+  },
+  "bin": {
+    "wesma": "./back/bin/wesma.ts"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -16,6 +19,7 @@
     "@iconify-json/fa6-regular": "^1.2.3",
     "@iconify-json/fa6-solid": "^1.2.3",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@types/yargs": "^17.0.33",
     "chalk": "^5.4.1",
     "classnames": "^2.5.1",
     "prettier": "^3.5.3",
@@ -26,6 +30,7 @@
     "unplugin-auto-import": "^19.2.0",
     "unplugin-icons": "^22.1.0",
     "vite": "^6.3.5",
-    "vite-plugin-svelte-md": "^0.1.7"
+    "vite-plugin-svelte-md": "^0.1.7",
+    "yargs": "^17.7.2"
   }
 }
