Multi-land deployment with custom titles and favicons

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,10 +26,17 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
 
+
+
     "paths": {
       "@/*": ["./front/*"],
       "@@/*": ["./land/*"]
     }
   },
+  "include": [
+    "front",
+    "land",
+    "back"
+  ],
   "exclude": ["node_modules"]
 }
