--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@elysiajs/static": "^1.3.0",
     "@iconify-json/fa6-regular": "^1.2.3",
     "@iconify-json/fa6-solid": "^1.2.3",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@types/yargs": "^17.0.33",
     "chalk": "^5.4.1",
     "classnames": "^2.5.1",
+    "elysia": "^1.3.4",
     "prettier": "^3.5.3",
     "svelte": "^5.28.2",
     "svelte-portal": "^2.2.1",
